--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,17 @@
-springdoc:
-  swagger-ui:
-    path: /swagger-ui.html
-  api-docs:
-    path: /api-docs
+#springdoc:
+#  swagger-ui:
+#    path: /swagger-ui.html
+#  api-docs:
+#    path: /api-docs
 
-spring:
-  jpa:
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    hibernate:
-      ddl-auto: update
-  datasource:
-    driver: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/wsr-test
-    username: root
-    password: postgres
+#spring:
+#  jpa:
+#    database: postgresql
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
+#    hibernate:
+#      ddl-auto: update
+#  datasource:
+#    driver: org.postgresql.Driver
+#    url: jdbc:postgresql://localhost:5432/wsr-test
+#    username: root
+#    password: postgres
